<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Insta Keeper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="download">Download</string>
    <string name="paste">Paste</string>
    <string name="url">URL</string>
    <string name="example">example</string>
    <string name="url_example">https://www.instagram.com/p/Bce6eWRghYN/</string>
    <string name="how_to_use">How to use</string>
    <string name="pictures">Pictures</string>
    <string name="videos">Videos</string>
    <string name="share">Share</string>
    <string name="rate_app">Rate this app</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="recommend_videos_to_us">Recommend videos to us</string>

    <string name="author_email">xchp2008@gmail.com</string>


    <string name="share_msg">"Share an app for you."</string>
    <string name="load_success">Load Success</string>
    <string name="loading">Loading...</string>
    <string name="input_the_link">Please input the link</string>
    <!--<string name="save_success_msg">图片已成功保存到</string>-->
    <!--<string name="save_fail_msg">SD卡不存在或者不可读写</string>-->
    <string name="step1">Step 1: Open Instagram</string>
    <string name="step2">Step 2: Copy Share URL</string>
    <string name="step3">Step 3: Open Insta Keeper, paste URL</string>
    <string name="step4">Step 4: Click Download Button</string>
</resources>
