<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/HowToUseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step1"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/step1"
            android:src="@drawable/step1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="20dp"
            android:background="#999"/>

        <TextView
            style="@style/HowToUseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step2"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/step1"
            android:src="@drawable/step2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="20dp"
            android:background="#999"/>

        <TextView
            style="@style/HowToUseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step3"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/step1"
            android:src="@drawable/step3"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="20dp"
            android:background="#999"/>

        <TextView
            style="@style/HowToUseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step4"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/step1"
            android:src="@drawable/step4"/>

    </LinearLayout>

</ScrollView>